# sentrec

./: AUTHORS  CMakeLists.txt  README.md  config.ini.example  example_sentences.csv  sentrec.qrc  sentrec_da_DK.ts
src/: aboutbox.cpp  aboutbox.h  audioprocessor.cpp  audioprocessor.h  audiorecorder.cpp  audiorecorder.h  globaldefs.h  main.cpp  mainwindow.cpp  mainwindow.h  sentencelist.cpp  sentencelist.h  sentencemodel.cpp  sentencemodel.h  settings.h  waveformwidget.cpp  waveformwidget.h  wavhandler.cpp  wavhandler.h
src/preferences/: configcheckbox.cpp  configcheckbox.h  configcombobox.cpp  configcombobox.h  configdialog.cpp  configdialog.h  configlineedit.cpp  configlineedit.h  configpages.cpp  configpages.h  configpathedit.cpp  configpathedit.h  configslider.cpp  configslider.h  configtextedit.cpp  configtextedit.h
